@@ -1,3 +1,7 @@
+Change log next version
+-----------------------
+* Fixed PowerMock OOM (OutOfMemory) issues with Mockito (big thanks to Henrik Karlsson for the patch)
+
 Change log 1.5.1 (2013-06-19)
 -----------------------------
 * Maven no longer adds classpath to jar manifests when building PowerMock (issue 413).
